--- a/Vistas/WinPelicula.xaml
+++ b/Vistas/WinPelicula.xaml
@@ -37,13 +37,12 @@
             <DataGrid Name="dgPelicula" Opacity="0.5" Foreground="White" Height="198" Background="Black" Margin="34,0,38,0" SelectionChanged="DgPelicula_SelectionChanged"/>
             <Grid Height="215">
                 <Label Content="Titulo" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="270,49,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.695,-1.534"/>
-                <TextBox HorizontalAlignment="Left" Height="22" Margin="419,62,0,0" TextWrapping="Wrap"  Background="Transparent" VerticalAlignment="Top" Width="120"/>
+                <TextBox HorizontalAlignment="Left" Height="22" Margin="419,62,0,0" TextWrapping="Wrap"  Background="Transparent" VerticalAlignment="Top" Width="120" Name="txtTitulo"/>
                 <Label Content="Duracion" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="270,90,0,0" VerticalAlignment="Top"/>
-                <TextBox HorizontalAlignment="Left" Height="22" Background="Transparent" Margin="419,103,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+                <TextBox HorizontalAlignment="Left" Height="22" Background="Transparent" Margin="419,103,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Name="txtDuracion"/>
                 <Label Content="Genero" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="270,135,0,0" VerticalAlignment="Top"/>
                 <Label Content="Clasificacion" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="270,172,0,0" VerticalAlignment="Top"/>
-                <ListBox HorizontalAlignment="Left" Background="Transparent" Height="24" Margin="419,148,0,0" VerticalAlignment="Top" Width="120"/>
-                <ListBox HorizontalAlignment="Left" Background="Transparent" Height="24" Margin="419,181,0,0" VerticalAlignment="Top" Width="120"/>
+                <ListBox HorizontalAlignment="Left" Background="Transparent" Height="24" Margin="419,148,0,0" VerticalAlignment="Top" Width="120" />
 
             </Grid>
 
@@ -59,9 +58,9 @@
 
             <Menu Foreground="White" Background="Transparent"  Margin="-69,59,485,10" Grid.RowSpan="2">
 
-                <MenuItem Header="NUEVO" Margin="10 " FontSize="20" />
-                <MenuItem Header="MODIFICAR" Margin="10" FontSize="20" />
-                <MenuItem Header="ELIMINAR" Margin="10" FontSize="20" />
+                <MenuItem Header="NUEVO" Margin="10 " FontSize="20" Name="bntNuevoFilms" Click="BntNuevoFilms_Click" />
+                <MenuItem Header="MODIFICAR" Margin="10" FontSize="20" Name="btnModificar"/>
+                <MenuItem Header="ELIMINAR" Margin="10" FontSize="20" Name="btnEliminarFilm"/>
 
             </Menu>
 
