--- a/Vistas/WinPelicula.xaml
+++ b/Vistas/WinPelicula.xaml
@@ -42,8 +42,12 @@
                 <TextBox HorizontalAlignment="Left" Height="22" Background="Transparent" Margin="419,103,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Name="txtDuracion"/>
                 <Label Content="Genero" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="270,135,0,0" VerticalAlignment="Top"/>
                 <Label Content="Clasificacion" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="270,172,0,0" VerticalAlignment="Top"/>
-                <ComboBox HorizontalAlignment="Left" Margin="419,150,0,0" VerticalAlignment="Top" Width="120" Background="#FFF9F7F7" Foreground="White"/>
-                <ComboBox HorizontalAlignment="Left" Margin="419,183,0,0" VerticalAlignment="Top" Width="120"/>
+                <ComboBox HorizontalAlignment="Left" Margin="419,150,0,0" VerticalAlignment="Top" Width="120" Background="Transparent" Foreground="White" Name="cmbxGenero">
+                    <ComboBoxItem Content="Drama" Background="Transparent" Foreground="White"/>
+                    <ComboBoxItem Content="Comedia"/>
+                    <ComboBoxItem Content="Terror"/>
+                </ComboBox>
+                <ComboBox HorizontalAlignment="Left" Margin="419,183,0,0" VerticalAlignment="Top" Width="120" Name="cmbxClasificacioin"/>
 
             </Grid>
 
