--- a/Vistas/MenuPrincipal.xaml
+++ b/Vistas/MenuPrincipal.xaml
@@ -6,62 +6,30 @@
          Icon="images/cine.ico" >
     <Grid>
 
-
         <StackPanel  Height="570" Margin="0,0,-12,0" Name="stackPanel2" VerticalAlignment="Top">
+
             <StackPanel.Background>
                 <ImageBrush ImageSource="/Vistas;component/images/prueba7.jpg" />
-
             </StackPanel.Background>
+
             <Grid HorizontalAlignment="Stretch" Height="110">
                 <Grid.ColumnDefinitions >
                     <ColumnDefinition Width="173*"  SharedSizeGroup="a"/>
                     <ColumnDefinition Width="587*" SharedSizeGroup="b"/>
                 </Grid.ColumnDefinitions>
                 <Image   Source="images/pruebaaa.png" Margin="24,10,33,10" Stretch="Fill"/>
-                <Menu Grid.Column="1" Foreground="White" Background="Transparent" x:Name="menu1" Margin="0,28,10,24">
+                <Menu Grid.Column="1" Foreground="White" Background="Transparent" x:Name="menu1" Margin="0,28,43,24">
 
                     <MenuItem Header="Usuario" Margin="10 " FontSize="20" />
                     <MenuItem Header="Pelicula" Margin="10" FontSize="20" Name="btnPelicula" Click="BtnPelicula_Click" />
                     <MenuItem Header="Butaca" Margin="10" FontSize="20" Name="btnButaca" Click="BtnButaca_Click"  />
                     <MenuItem Header="Proyecciones" Margin="10" FontSize="20" Name="btnProyecciones" Click="BtnProyecciones_Click"/>
+                    <MenuItem Header="Salir" Margin="10 " FontSize="20" Click="MenuItem_Click" />
                 </Menu>
-
-
-
-
             </Grid>
+
             <DataGrid Name="dgUsuario" Opacity="0.5" Foreground="White" Height="203" Background="Black" Margin="34,0,38,0"/>
-            <Grid Height="215">
-                <Label Content="Nombre Usuario" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,90,0,0" VerticalAlignment="Top"/>
-                <TextBox HorizontalAlignment="Left" Height="22" Margin="409,97,0,0" TextWrapping="Wrap" Text="TextBox" Background="Transparent" VerticalAlignment="Top" Width="120"/>
-                <Label Content="Contraseña" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,125,0,0" VerticalAlignment="Top"/>
-                <TextBox HorizontalAlignment="Left" Height="22" Background="Transparent" Margin="409,132,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-                <Label Content="Nombre y apellido" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,165,0,0" VerticalAlignment="Top"/>
-                <Label Content="Rol" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,202,0,-24" VerticalAlignment="Top"/>
-                <ListBox HorizontalAlignment="Left" Background="Transparent" Height="24" Margin="409,169,0,0" VerticalAlignment="Top" Width="120"/>
-                <ListBox HorizontalAlignment="Left" Background="Transparent" Height="24" Margin="409,207,0,-16" VerticalAlignment="Top" Width="120"/>
-
-            </Grid>
-
 
         </StackPanel>
-        <Grid HorizontalAlignment="Left" Height="130" Margin="98,430,0,0" VerticalAlignment="Top" Width="570">
-
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="0*"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-
-            <Menu Foreground="White" Background="Transparent"  Margin="97,-89,111,31">
-
-                <MenuItem Header="NUEVO" Margin="10 " FontSize="20"  />
-                <MenuItem Header="MODIFICAR" Margin="10" FontSize="20" />
-                <MenuItem Header="ELIMINAR" Margin="10" FontSize="20" />
-
-            </Menu>
-
-        </Grid>
-
     </Grid>
 </Window>
