--- a/Vistas/menuVendedor.xaml
+++ b/Vistas/menuVendedor.xaml
@@ -21,11 +21,11 @@
                     <ColumnDefinition Width="587*" SharedSizeGroup="b"/>
                 </Grid.ColumnDefinitions>
                 <Image   Source="images/pruebaaa.png" Margin="24,10,33,10" Stretch="Fill"/>
-                <Menu Grid.Column="1" Foreground="White" Background="Transparent" x:Name="menu1" Margin="0,28,10,0">
+                <Menu Grid.Column="1" Foreground="White" Background="Transparent" x:Name="menu1" Margin="0,28,39,0">
 
                     <MenuItem Header="Cliente" Margin="10 " FontSize="20" />
                     <MenuItem Header="Ticket" Margin="10" FontSize="20" />
-                    <MenuItem Header="Salir" Margin="10" FontSize="20" />
+                    <MenuItem Header="Salir" Margin="10" FontSize="20" Click="MenuItem_Click" />
 
                 </Menu>
 
